# 15puzzle

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: board.hpp  button.hpp  game.hpp  renderer.hpp  tile.hpp
src/: board.cpp  game.cpp  main.cpp  renderer.cpp  tile.cpp
